# OpenTTD-patches

./: .dorpsgek.yml  .gitignore  .ottdrev-vc  .ottdrev-vc-dbpp  CMakeLists.txt  COMPILING.md  CPackProperties.cmake.in  Doxyfile.in  Makefile.bundle.in  Makefile.in  Makefile.src.in  README.md  build-dedicated.sh  build.sh  config.lib  configure  findversion.sh  german.lng  installation.md  jgrpp-changelog.md  korean.txt  make_bundle.sh  source.list  vcpkg.json  version_utils.sh
src/: CMakeLists.txt  aircraft.h  aircraft_cmd.cpp  aircraft_gui.cpp  airport.h  airport_gui.cpp  animated_tile.cpp  animated_tile.h  animated_tile_func.h  articulated_vehicles.cpp  articulated_vehicles.h  autoreplace.cpp  autoreplace_base.h  autoreplace_cmd.cpp  autoreplace_cmd.h  autoreplace_func.h  autoreplace_gui.cpp  base_consist.cpp  base_consist.h  base_media_base.h  base_media_func.h  base_media_graphics.h  base_media_music.h  base_station_base.h  bitmap_type.h  bmp.h  bootstrap_gui.cpp  bridge.h  bridge_gui.cpp  bridge_map.cpp  bridge_map.h  bridge_signal_map.h  build_vehicle_gui.cpp  cachecheck.cpp  cargo_type.h  cargoaction.cpp  cargoaction.h  cargomonitor.cpp  cargomonitor.h  cargopacket.cpp  (+584 more)
src/ai/: ai.hpp  ai_config.cpp  ai_core.cpp  ai_gui.cpp  ai_info.cpp  ai_info.hpp  ai_instance.cpp  ai_instance.hpp  ai_scanner.cpp
src/blitter/: 32bpp_anim.cpp  32bpp_anim.hpp  32bpp_anim_sse2.cpp  32bpp_anim_sse2.hpp  32bpp_anim_sse4.cpp  32bpp_anim_sse4.hpp  32bpp_base.cpp  32bpp_base.hpp  32bpp_optimized.cpp  32bpp_optimized.hpp  32bpp_simple.cpp  32bpp_simple.hpp  32bpp_sse2.cpp  32bpp_sse2.hpp  32bpp_sse4.hpp  32bpp_sse_func.hpp  32bpp_ssse3.hpp  40bpp_anim.cpp  40bpp_anim.hpp  8bpp_base.cpp  8bpp_base.hpp  8bpp_optimized.cpp  8bpp_optimized.hpp  8bpp_simple.cpp  8bpp_simple.hpp  base.hpp  common.hpp  factory.hpp  null.cpp  null.hpp
src/core/: CMakeLists.txt  alignment.hpp  alloc_func.cpp  alloc_func.hpp  alloc_type.hpp  arena_alloc.hpp  backup_type.hpp  base_bitset_type.hpp  bit_cast.hpp  bitmath_func.cpp  bitmath_func.hpp  checksum_func.hpp  container_func.hpp  dyn_arena_alloc.hpp  endian_func.hpp  endian_type.hpp  enum_type.hpp  flatset_type.hpp  format.cpp  format.hpp  format_variant.hpp  geometry_func.cpp  geometry_func.hpp  geometry_type.hpp  hash_func.hpp  integer_type.hpp  kdtree.hpp  math_func.cpp  math_func.hpp  mem_func.hpp  multimap.hpp  overflowsafe_type.hpp  pod_pool.hpp  pool_func.cpp  pool_func.hpp  pool_id_type.hpp  pool_type.hpp  random_func.cpp  random_func.hpp  ring_buffer.hpp  (+17 more)
src/fontcache/: freetypefontcache.cpp  spritefontcache.cpp  spritefontcache.h  truetypefontcache.cpp  truetypefontcache.h
src/game/: game.hpp  game_config.cpp  game_core.cpp  game_gui.cpp  game_info.cpp  game_info.hpp  game_instance.cpp  game_instance.hpp  game_scanner.cpp  game_text.cpp  game_text.hpp
src/lang/: CMakeLists.txt  afrikaans.txt  arabic_egypt.txt  basque.txt  belarusian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  chuvash.txt  croatian.txt  czech.txt  danish.txt  dutch.txt  english.txt  english_AU.txt  english_US.txt  esperanto.txt  estonian.txt  faroese.txt  finnish.txt  french.txt  frisian.txt  gaelic.txt  galician copy.txt  galician.txt  german.txt  greek.txt  hebrew.txt  hindi.txt  hungarian.txt  icelandic.txt  ido.txt  indonesian.txt  irish.txt  italian.txt  japanese.txt  korean.txt  latin.txt  latvian.txt  lithuanian.txt  (+28 more)
src/linkgraph/: demands.cpp  demands.h  flowmapper.cpp  linkgraph.cpp  linkgraph.h  linkgraph_base.h  linkgraph_gui.cpp  linkgraph_gui.h  linkgraph_type.h  linkgraphjob.cpp  linkgraphjob.h  linkgraphjob_base.h  linkgraphschedule.cpp  linkgraphschedule.h  mcf.cpp  mcf.h  refresh.cpp  refresh.h
src/misc/: CMakeLists.txt  array.hpp  dbg_helpers.cpp  dbg_helpers.h  getoptdata.cpp  getoptdata.h  hashtable.hpp  history.cpp  history_func.hpp  history_type.hpp  lrucache.hpp
src/music/: allegro_m.cpp  allegro_m.h  bemidi.cpp  bemidi.h  cocoa_m.cpp  cocoa_m.h  dmusic.cpp  dmusic.h  extmidi.cpp  extmidi.h  fluidsynth.cpp  fluidsynth.h  midi.h  midifile.cpp  midifile.hpp  music_driver.hpp  null_m.h  win32_m.cpp  win32_m.h
src/network/: CMakeLists.txt  network.cpp  network.h  network_admin.cpp  network_admin.h  network_base.h  network_chat_gui.cpp  network_client.cpp  network_client.h  network_command.cpp  network_content.cpp  network_content.h  network_content_gui.cpp  network_content_gui.h  network_coordinator.cpp  network_coordinator.h  network_crypto.cpp  network_crypto.h  network_crypto_internal.h  network_func.h  network_gamelist.cpp  network_gui.cpp  network_gui.h  network_internal.h  network_query.cpp  network_query.h  network_server.cpp  network_server.h  network_stun.cpp  network_stun.h  network_survey.cpp  network_survey.h  network_sync.h  network_turn.cpp  network_turn.h  network_type.h  network_udp.cpp
src/newgrf/: CMakeLists.txt  newgrf_act0.cpp  newgrf_act0_aircraft.cpp  newgrf_act0_airports.cpp  newgrf_act0_badges.cpp  newgrf_act0_bridges.cpp  newgrf_act0_canals.cpp  newgrf_act0_cargo.cpp  newgrf_act0_globalvar.cpp  newgrf_act0_houses.cpp  newgrf_act0_industries.cpp  newgrf_act0_newlandscape.cpp  newgrf_act0_objects.cpp  newgrf_act0_railtypes.cpp  newgrf_act0_roadstops.cpp  newgrf_act0_roadtypes.cpp  newgrf_act0_roadvehs.cpp  newgrf_act0_ships.cpp  newgrf_act0_signals.cpp  newgrf_act0_sounds.cpp  newgrf_act0_stations.cpp  newgrf_act0_trains.cpp  newgrf_act1.cpp  newgrf_act11.cpp  newgrf_act14.cpp  newgrf_act2.cpp  newgrf_act3.cpp  newgrf_act4.cpp  newgrf_act5.cpp  newgrf_act6.cpp  newgrf_act7_9.cpp  newgrf_act8.cpp  newgrf_acta.cpp  newgrf_actd.cpp  newgrf_acte.cpp  newgrf_bytereader.cpp  newgrf_bytereader.h  newgrf_internal.h  newgrf_internal_vehicle.h  newgrf_optimiser.cpp  (+3 more)
src/pathfinder/: aystar.cpp  aystar.h  follow_track.hpp  pathfinder_func.h  pathfinder_type.h  pf_performance_timer.hpp  queue.cpp  queue.h  water_regions.cpp  water_regions.h
src/saveload/: CMakeLists.txt  afterload.cpp  ai_sl.cpp  airport_sl.cpp  animated_tile_sl.cpp  autoreplace_sl.cpp  bridge_signal_sl.cpp  cargomonitor_sl.cpp  cargopacket_sl.cpp  cheat_sl.cpp  (+47 more)
(+721 files in other folders)
